# IDMS

./: .gitattributes  .gitignore  README.md  calculate_baseline_r2.py  compare_training_strategies.py  create_synthetic_residual_validation.py  env.yml  environment.yml  extract_pytorch_residuals.py  fit_arma_garch_all_trials.py  pyproject.toml  pytorch_residual_statistical_tests.py  save_individual_trial_residuals.py  test_best_model.py  train_elbow_trajectory_predictor.py  trial_level_statistical_tests.py  verify_r2_calculation.py
data/: README.md
data_gen/: idms_trajectory_datagenerator.py  preproc.py
model_selection/: elbow_trajectory_architectures.py  elbow_uncertainty_model.py  modular_architectures.py  uncertainty_losses.py  uncertainty_trajectory_layers.py
pytorch_models/: pytorch_data_adapter.py  tcanet_idms.py  train_tcanet_idms.py
residual_analysis/: arma_garch_residual_model.py
scripts/: calculate_baseline_r2.py  compare_strategies.py  compare_training_strategies.py  extract_all_residuals.py  extract_pytorch_residuals.py  extract_residuals.py  fit_arma_garch.py  fit_arma_garch_all_trials.py  run_experiments.py  run_residual_workflow.py  test_best_model.py  train_elbow_trajectory_predictor.py  train_estimator.py  train_uncertainty.py  verify_r2_calculation.py
scripts/utils/: fix_pickle_nu_values.py  robust_residual_handling.py
scripts/visualization/: comprehensive_analysis.py  create_boxplot.py  create_heatmap.py  plot_parameters.py  plot_predictions.py  plot_trajectories.py
src/residual_analysis/: arma_garch.py  plotting.py  (+1 more)
tests/: test_arma_garch.py  test_jacobian_torch.py  test_losses_torch.py  test_metrics.py  test_model.py  test_model_torch.py  test_train_torch.py
utility/: save_load_util.py
(+18 files in other folders)
